Finished property section. Starting Contact section

--- a/index.html
+++ b/index.html
@@ -167,42 +167,43 @@
 				<div class="best-deal container">
 					<h6>| Best Deal</h6>
 					<h2>Find Your Best Deal Right Now!</h2>
-					<div class="flex">
+					<div class="deal__btn-container flex">
 						<button class="btn__general">Apartment</button>
-						<button class="btn__general">Villa</button>
+						<button class="btn__general">Villa House</button>
 						<button class="btn__general">Penthouse</button>
 					</div>
-					<aside class="info__table">
-						<ul>
-							<li>Total Flat Space <span>185 m2</span></li>
-							<li>Floor number <span>26th</span></li>
-							<li>Number of rooms <span>4</span></li>
-							<li>Parking Available <span>Yes</span></li>
-							<li>Payment Process <span>Bank</span></li>
-						</ul>
-					</aside>
-					<img src="images/deal-02.jpg" />
-					<div>
-						<h4>Additional details</h4>
-						<p>
+					<div class="deal__container flex">
+						<img class="deal__image" src="images/deal-02.jpg" />
+						<aside class="info__table">
+							<ul>
+								<li>Total Flat Space <span>185 m2</span></li>
+								<li>Floor number <span>26th</span></li>
+								<li>Number of rooms <span>4</span></li>
+								<li>Parking Available <span>Yes</span></li>
+								<li>Payment Process <span>Bank</span></li>
+							</ul>
+						</aside>
+					</div>
+					<h4>Additional details</h4>
+					<div class=" details__container flex">
+						<p class="details-one">
 							Lorem ipsum dolor sit amet, consectetur adipiscing elit, do eiusmod tempor pack incididunt ut labore et
-							dolore magna aliqua quised ipsum suspendisse. Lorem ipsum dolor sit amet.
+							dolore magna aliqua quised ipsum suspendisse. Lorem ipsum dolor sit amet. 	Additional details Lorem ipsum dolor sit amet, consectetur adipiscing elit, do eiusmod tempor pack
 						</p>
-						<p>
-							Additional details Lorem ipsum dolor sit amet, consectetur adipiscing elit, do eiusmod tempor pack
+						<p class="details-two">
 							incididunt ut labore et dolore magna aliqua quised ipsum suspendisse. Lorem ipsum dolor sit amet,
 							consectetur adipiscing elit, do eiusmod tempor pack incididunt ut labore et dolore magna aliqua quised
 							ipsum suspendisse.
 						</p>
-						<button href="#" class="btn__schedule"><i class="fa fa-calendar"></i>Schedule a visit</button>
 					</div>
+					<button href="#" class="btn__schedule"><i class="fa fa-calendar"></i>Schedule a visit</button>
 				</div>
 			</section>
 
 			<section class="property__section container">
 				<h6>| Properties</h6>
 				<h2>We Provide the most sought after Properties</h2>
-				<div class="property__cards">
+				<div class="property__cards flex">
 					<div class="card flex">
 						<img src="images/property-01.jpg" />
 						<div class="card__header flex">
