Starting contact section

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 						<button class="btn__general">Penthouse</button>
 					</div>
 					<div class="deal__container flex">
-						<img class="deal__image" src="images/deal-02.jpg" />
+						<img class="deal__image" src="images/property-05.jpg" />
 						<aside class="info__table">
 							<ul>
 								<li>Total Flat Space <span>185 m2</span></li>
