--- a/index.html
+++ b/index.html
@@ -302,12 +302,12 @@
 					<h2>Get In Touch With Our Agents</h2>
 				</div>
 
-				<div class="contact__content container">
+				<div class="contact__content container flex">
 					<div class="google-map">
 						<iframe
 							src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14351.107544843828!2d-80.13252263928365!3d25.942549735816613!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88d9ace0f4fb6051%3A0x83ad83c3f213ec3a!2sSunny%20Isles%20Beach%20Government%20Center!5e0!3m2!1sen!2sus!4v1710168744928!5m2!1sen!2sus"
-							width="600"
-							height="450"
+							width="100%"
+							height="300"
 							style="border: 0"
 							allowfullscreen=""
 							loading="lazy"
