Footer media queries

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 						<li class="li__map"><i class="fa fa-map"></i>Sunny Isles Beach, FL 33160</li>
 					</ul>
 				</div>
-				<div>
+				<div class="social-container flex">
 					<ul class="flex">
 						<li>
 							<button href="#" class="social-toggle">
@@ -50,7 +50,7 @@
 			</div>
 
 			<nav>
-				<div class="main__nav flex">
+				<div class="main__nav-container flex">
 					<a class="comp-logo" href="#">Villa</a>
 					<button class="nav-toggle" aria-label="open navigation">
 						<span class="hamburger"></span>
@@ -317,12 +317,12 @@
 					<div class="icon-container flex">
 						<div class="item phone flex">
 							<img src="images/phone-icon.png" />
-							<h4>000-000-0000</h4>
+							<h4>000-000-0000<br><span>Call 24/7</span></h4>
 						</div>
 
 						<div class="item email flex">
 							<img src="images/email-icon.png" />
-							<h4>info@villa.com</h4>
+							<h4>info@villa.com<br><span>Email</span></h4>
 						</div>
 					</div>
 
@@ -359,27 +359,31 @@
 			</section>
 		</main>
 
-		<footer class="footer__section">
+		<footer class="footer__section flex">
+			<div>
 			<div class="comp-logo-white">Villa</div>
-			<ul>
-				<li class="footer-subhead">Contact us</li>
-				<li>Sunny Isles Beach, FL 33160</li>
-				<li>000-000-0000</li>
-				<li>info@villa.com</li>
-			</ul>
-			<ul>
-				<li class="footer-subhead">Company</li>
-				<li>About</li>
-				<li>000-000-0000</li>
-				<li>Careers</li>
-			</ul>
-			<ul>
-				<li class="footer-subhead">Resources</li>
-				<li>Directory</li>
-				<li>FAQs</li>
-				<li>Privacy & Terms</li>
-			</ul>
-			<p>Copyright 2024 Villa Inc. <br />All rights reserved.</p>
+			</div>
+			<div class="footer__nav flex">
+				<ul>
+					<li class="footer-subhead">Contact us</li>
+					<li>Sunny Isles Beach, FL 33160</li>
+					<li>000-000-0000</li>
+					<li>info@villa.com</li>
+				</ul>
+				<ul>
+					<li class="footer-subhead">Company</li>
+					<li>About</li>
+					<li>000-000-0000</li>
+					<li>Careers</li>
+				</ul>
+				<ul>
+					<li class="footer-subhead">Resources</li>
+					<li>Directory</li>
+					<li>FAQs</li>
+					<li>Privacy & Terms</li>
+				</ul>
+				<p>Copyright 2024 Villa Inc. <br />All rights reserved.</p>
+			</div>
 		</footer>
 		<script src="main.js"></script>
 	</body>
