--- a/index.html
+++ b/index.html
@@ -80,28 +80,27 @@
 				<h6>| Featured</h6>
 				<h2>Best Apartment & Ocean View</h2>
 				<div class="feature__wrapper flex">
-					<img class="feature--image" src="images/featured.jpg" />
+					<img class="feature__image" src="images/featured.jpg" />
 
-					<div class="feature--icon flex"><img src="images/featured-icon.png" />
+					<div class="feature__icon flex"><img src="images/featured-icon.png" />
 					</div>
 
 					<div class="btn__wrapper">
-						<button class="btn__general">Useful links</button>
-						<p>
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam dolor quaerat sint eligendi harum
-						</p>
-						<button class="btn__general">How does this work?</button>
-						<p>
-							Cumque, veniam qui unde officiis totam est, dicta, aliquam labore? Laborum vitae veritatis distinctio
-							illum. Sequi?
-						</p>
-						<button class="btn__general">Why is Villa the best?</button>
-						<p>
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam dolor quaerat sint eligendi harum
-						</p>
-					</div>
-				</div>
-					<aside class="flex">
+							<button class="btn__general">Useful links</button>
+							<p>
+								Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam dolor quaerat sint eligendi harum
+							</p>
+							<button class="btn__general">How does this work?</button>
+							<p>
+								Cumque, veniam qui unde officiis totam est, dicta, aliquam labore? Laborum vitae veritatis distinctio
+								illum. Sequi?
+							</p>
+							<button class="btn__general">Why is Villa the best?</button>
+							<p>
+								Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam dolor quaerat sint eligendi harum
+							</p>
+						</div>
+											<aside class="flex">
 						<div class="featured__detail flex">
 							<div class="feature flex">
 								<img src="images/info-icon-01.png" />
@@ -142,6 +141,7 @@
 					<div class="video-frame">
 						<img src="images/video-frame.jpg" />
 						<a href="https://www.youtube.com/watch?v=-lUv-Mt2QD4" target="_blank"><i class="fa fa-play"></i></a>
+
 					</div>
 				</div>
 
@@ -361,7 +361,31 @@
 
 		<footer class="footer__section flex">
 			<div>
-			<div class="comp-logo-white">Villa</div>
+				<div class="comp-logo-white">Villa</div>
+					<div>
+						<ul class="social__container-ftr flex">
+							<li>
+								<button href="#" class="social-footer">
+									<span class="fa-brands fa-facebook social-icon"></span>
+								</button>
+							</li>
+							<li>
+								<button href="#" class="social-footer">
+									<span class="fa-brands fa-twitter social-icon"></span>
+								</button>
+							</li>
+							<li>
+								<button href="#" class="social-footer">
+									<span class="fa-brands fa-linkedin social-icon"></span>
+								</button>
+							</li>
+							<li>
+								<button href="#" class="social-footer">
+									<span class="fa-brands fa-square-instagram social-icon"></span>
+								</button>
+							</li>
+						</ul>
+				</div>
 			</div>
 			<div class="footer__nav flex">
 				<ul>
@@ -373,7 +397,7 @@
 				<ul>
 					<li class="footer-subhead">Company</li>
 					<li>About</li>
-					<li>000-000-0000</li>
+					<li>Mission</li>
 					<li>Careers</li>
 				</ul>
 				<ul>
