Deal section media queries adjusted

--- a/index.html
+++ b/index.html
@@ -86,21 +86,20 @@
 					</div>
 
 					<div class="btn__wrapper">
-							<button class="btn__general">Useful links</button>
-							<p>
-								Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam dolor quaerat sint eligendi harum
-							</p>
-							<button class="btn__general">How does this work?</button>
-							<p>
-								Cumque, veniam qui unde officiis totam est, dicta, aliquam labore? Laborum vitae veritatis distinctio
-								illum. Sequi?
-							</p>
-							<button class="btn__general">Why is Villa the best?</button>
-							<p>
-								Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam dolor quaerat sint eligendi harum
-							</p>
-						</div>
-											<aside class="flex">
+						<button class="btn__general">Useful links</button>
+						<p>
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam dolor quaerat sint eligendi harum
+						</p>
+						<button class="btn__general">How does this work?</button>
+						<p>
+							Cumque, veniam qui unde officiis totam est, dicta, aliquam labore? Laborum vitae veritatis distinctio illum. Sequi?
+						</p>
+						<button class="btn__general">Why is Villa the best?</button>
+						<p>
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam dolor quaerat sint eligendi harum
+						</p>
+					</div>
+					<aside class="flex">
 						<div class="featured__detail flex">
 							<div class="feature flex">
 								<img src="images/info-icon-01.png" />
@@ -183,20 +182,23 @@
 								<li>Payment Process <span>Bank</span></li>
 							</ul>
 						</aside>
+						<div class="details__container flex">
+							<h4>Additional details</h4>
+							<div class=" details__p flex">
+								<p class="details-one">
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit, do eiusmod tempor pack incididunt ut labore et
+									dolore magna aliqua quised ipsum suspendisse. Lorem ipsum dolor sit amet. 	Additional details Lorem ipsum dolor sit amet, consectetur adipiscing elit, do eiusmod tempor pack
+								</p>
+								<p class="details-two">
+									incididunt ut labore et dolore magna aliqua quised ipsum suspendisse. Lorem ipsum dolor sit amet,
+									consectetur adipiscing elit, do eiusmod tempor pack incididunt ut labore et dolore magna aliqua quised
+									ipsum suspendisse.
+								</p>
+							</div>
+							<button href="#" class="btn__schedule"><i class="fa fa-calendar"></i>Schedule a visit
+							</button>
+						</div>
 					</div>
-					<h4>Additional details</h4>
-					<div class=" details__container flex">
-						<p class="details-one">
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit, do eiusmod tempor pack incididunt ut labore et
-							dolore magna aliqua quised ipsum suspendisse. Lorem ipsum dolor sit amet. 	Additional details Lorem ipsum dolor sit amet, consectetur adipiscing elit, do eiusmod tempor pack
-						</p>
-						<p class="details-two">
-							incididunt ut labore et dolore magna aliqua quised ipsum suspendisse. Lorem ipsum dolor sit amet,
-							consectetur adipiscing elit, do eiusmod tempor pack incididunt ut labore et dolore magna aliqua quised
-							ipsum suspendisse.
-						</p>
-					</div>
-					<button href="#" class="btn__schedule"><i class="fa fa-calendar"></i>Schedule a visit</button>
 				</div>
 			</section>
 
