Fixed featured icon

--- a/index.html
+++ b/index.html
@@ -80,13 +80,15 @@
 				<h6>| Featured</h6>
 				<h2>Best Apartment & Ocean View</h2>
 				<div class="feature__wrapper flex">
-					<img class="feature__image" src="images/featured.jpg" />
+					<div class="relative">
+						<img class="feature__image" src="images/featured.jpg" />
 
-					<div class="feature__icon flex"><img src="images/featured-icon.png" />
+						<div class="feature__icon flex"><img src="images/featured-icon.png" />
+						</div>
 					</div>
 
 					<div class="btn__wrapper">
-						<button class="btn__general">Useful links</button>
+						<button class="btn__general">Additional resources</button>
 						<p>
 							Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam dolor quaerat sint eligendi harum
 						</p>
@@ -140,7 +142,6 @@
 					<div class="video-frame">
 						<img src="images/video-frame.jpg" />
 						<a href="https://www.youtube.com/watch?v=-lUv-Mt2QD4" target="_blank"><i class="fa fa-play"></i></a>
-
 					</div>
 				</div>
 
@@ -156,7 +157,7 @@
 						</div>
 						<div class="fact flex">
 							<span class="flex">24</span>
-							<h8>Awards Won</h8>
+							<h8>Industry Awards</h8>
 						</div>
 					</div>
 				</div>
