Added highlight section

--- a/index.html
+++ b/index.html
@@ -51,15 +51,15 @@
 
 			<nav>
 				<div class="main__nav-container flex">
-					<a class="comp-logo" href="#">Villa</a>
+					<a class="comp-logo" href="index.html">Villa</a>
 					<button class="nav-toggle" aria-label="open navigation">
 						<span class="hamburger"></span>
 					</button>
 					<nav class="nav">
 						<ul class="nav__list flex">
-							<li class="nav__item"><a href="#" class="nav__link">Home</a></li>
+							<li class="nav__item"><a href="index.html" class="nav__link">Home</a></li>
 							<li class="nav__item"><a href="#" class="nav__link">Properties</a></li>
-							<li class="nav__item"><a href="#" class="nav__link">Property Details</a></li>
+							<li class="nav__item"><a href="property-details.html" class="nav__link">Property Details</a></li>
 							<li class="nav__item"><a href="#" class="nav__link">Contact us</a></li>
 							<li>
 								<button href="#" class="btn__schedule"><i class="fa fa-calendar"></i>Schedule a visit</button>
@@ -83,8 +83,7 @@
 					<div class="relative">
 						<img class="feature__image" src="images/featured.jpg" />
 
-						<div class="feature__icon flex"><img src="images/featured-icon.png" />
-						</div>
+						<div class="feature__icon flex"><img src="images/featured-icon.png" /></div>
 					</div>
 
 					<div class="btn__wrapper">
@@ -94,7 +93,8 @@
 						</p>
 						<button class="btn__general">How does this work?</button>
 						<p>
-							Cumque, veniam qui unde officiis totam est, dicta, aliquam labore? Laborum vitae veritatis distinctio illum. Sequi?
+							Cumque, veniam qui unde officiis totam est, dicta, aliquam labore? Laborum vitae veritatis distinctio
+							illum. Sequi?
 						</p>
 						<button class="btn__general">Why is Villa the best?</button>
 						<p>
@@ -106,7 +106,7 @@
 							<div class="feature flex">
 								<img src="images/info-icon-01.png" />
 								<div>
-									<span class="flex">250 m2</span>
+									<span class="flex">450 m2</span>
 									<h8>Total Flat Space</h8>
 								</div>
 							</div>
@@ -131,6 +131,7 @@
 									<h8>24/7 Security</h8>
 								</div>
 							</div>
+						</div>
 					</aside>
 				</div>
 			</section>
@@ -185,16 +186,21 @@
 						</aside>
 						<div class="details__container flex">
 							<h4>Additional details</h4>
-							<div class=" details__p flex">
+							<div class="details__p flex">
 								<p class="details-one">
-									The prime location of this turnkey property boasts a prime corner lot with excellent curb appeal and ample parking. The spacious floorplan features an open-concept layout with high-end finishes throughout, including gleaming hardwood floors, custom cabinetry, and stainless steel appliances. Upstairs, the expansive master suite offers a luxurious en-suite bathroom and private balcony, perfect for enjoying the stunning city views.
+									The prime location of this turnkey property boasts a prime corner lot with excellent curb appeal and
+									ample parking. The spacious floorplan features an open-concept layout with high-end finishes
+									throughout, including gleaming hardwood floors, custom cabinetry, and stainless steel appliances.
+									Upstairs, the expansive master suite offers a luxurious en-suite bathroom and private balcony,
+									perfect for enjoying the stunning city views.
 								</p>
 								<p class="details-two">
-									Situated in a highly desirable neighborhood, this investment property presents a unique opportunity for both the seasoned real estate investor and the first-time homebuyer. The property's flexible zoning allows for a variety of potential uses, from a single-family residence to a multi-unit rental. 
+									Situated in a highly desirable neighborhood, this investment property presents a unique opportunity
+									for both the seasoned real estate investor and the first-time homebuyer. The property's flexible
+									zoning allows for a variety of potential uses, from a single-family residence to a multi-unit rental.
 								</p>
 							</div>
-							<button href="#" class="btn__schedule"><i class="fa fa-calendar"></i>Schedule a visit
-							</button>
+							<button href="#" class="btn__schedule"><i class="fa fa-calendar"></i>Schedule a visit</button>
 						</div>
 					</div>
 				</div>
@@ -317,12 +323,12 @@
 					<div class="icon-container flex">
 						<div class="item phone flex">
 							<img src="images/phone-icon.png" />
-							<h4>000-000-0000<br><span>Call 24/7</span></h4>
+							<h4>000-000-0000<br /><span>Call 24/7</span></h4>
 						</div>
 
 						<div class="item email flex">
 							<img src="images/email-icon.png" />
-							<h4>info@villa.com<br><span>Email</span></h4>
+							<h4>info@villa.com<br /><span>Email</span></h4>
 						</div>
 					</div>
 
@@ -362,29 +368,29 @@
 		<footer class="footer__section flex">
 			<div>
 				<div class="comp-logo-white">Villa</div>
-					<div>
-						<ul class="social__container-ftr flex">
-							<li>
-								<button href="#" class="social-footer">
-									<span class="fa-brands fa-facebook social-icon"></span>
-								</button>
-							</li>
-							<li>
-								<button href="#" class="social-footer">
-									<span class="fa-brands fa-twitter social-icon"></span>
-								</button>
-							</li>
-							<li>
-								<button href="#" class="social-footer">
-									<span class="fa-brands fa-linkedin social-icon"></span>
-								</button>
-							</li>
-							<li>
-								<button href="#" class="social-footer">
-									<span class="fa-brands fa-square-instagram social-icon"></span>
-								</button>
-							</li>
-						</ul>
+				<div>
+					<ul class="social__container-ftr flex">
+						<li>
+							<button href="#" class="social-footer">
+								<span class="fa-brands fa-facebook social-icon"></span>
+							</button>
+						</li>
+						<li>
+							<button href="#" class="social-footer">
+								<span class="fa-brands fa-twitter social-icon"></span>
+							</button>
+						</li>
+						<li>
+							<button href="#" class="social-footer">
+								<span class="fa-brands fa-linkedin social-icon"></span>
+							</button>
+						</li>
+						<li>
+							<button href="#" class="social-footer">
+								<span class="fa-brands fa-square-instagram social-icon"></span>
+							</button>
+						</li>
+					</ul>
 				</div>
 			</div>
 			<div class="footer__nav flex">
