--- a/property-details.html
+++ b/property-details.html
@@ -10,8 +10,8 @@
 			rel="stylesheet"
 		/>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
-		<link rel="stylesheet" href="style.css" />
-		<title>Villa Agency - Real Estate</title>
+		<link rel="stylesheet" href="style-property.css" />
+		<title>Villa Agency - Property Details</title>
 	</head>
 
 	<body>
@@ -51,15 +51,15 @@
 
 			<nav>
 				<div class="main__nav-container flex">
-					<a class="comp-logo" href="#">Villa</a>
+					<a class="comp-logo" href="index.html">Villa</a>
 					<button class="nav-toggle" aria-label="open navigation">
 						<span class="hamburger"></span>
 					</button>
 					<nav class="nav">
 						<ul class="nav__list flex">
-							<li class="nav__item"><a href="#" class="nav__link">Home</a></li>
+							<li class="nav__item"><a href="index.html" class="nav__link">Home</a></li>
 							<li class="nav__item"><a href="#" class="nav__link">Properties</a></li>
-							<li class="nav__item"><a href="#" class="nav__link">Property Details</a></li>
+							<li class="nav__item"><a href="property-details.html" class="nav__link">Property Details</a></li>
 							<li class="nav__item"><a href="#" class="nav__link">Contact us</a></li>
 							<li>
 								<button href="#" class="btn__schedule"><i class="fa fa-calendar"></i>Schedule a visit</button>
@@ -71,320 +71,105 @@
 		</header>
 
 		<main>
-			<section class="hero">
-				<span>Toronto, <em>Canada</em></span>
-				<h1>Hurry!<br />Get the best villa for you</h1>
-			</section>
+			<section class="property__section">
+                <div class="image-container flex">
+					<h6>Home/Property</h6>
+					<h2>Property Details</h2>
+				</div>
 
-			<section class="featured container">
-				<h6>| Featured</h6>
-				<h2>Best Apartment & Ocean View</h2>
-				<div class="feature__wrapper flex">
-					<div class="relative">
-						<img class="feature__image" src="images/featured.jpg" />
-
-						<div class="feature__icon flex"><img src="images/featured-icon.png" />
+				<div class="property__cards flex">
+					<div class="card flex">
+						<img src="images/property-01.jpg" />
+						<div class="property-description flex">
+							<span class="property__flag">Luxury Villa</span>
+                            <h8 class="card__title">18 New Street Miami, FL 97219</h8>
+							<h6 class="card__price">$2.264.000</h6>
+                        </div>
+                        <div class="card__description">
+							Bedrooms: <span>8</span> Bathrooms: <span>8</span> Area: <span>545m2</span> Floor:
+							<span>3</span> Parking: <span>6</span>
 						</div>
-					</div>
+                        <div class="details__container flex">
+							 <h4>Additional details</h4>
+							<div class="details__p flex">
+								<p class="details-one">
+									The prime location of this turnkey property boasts a prime corner lot with excellent curb appeal and
+									ample parking. The spacious floorplan features an open-concept layout with high-end finishes
+									throughout, including gleaming hardwood floors, custom cabinetry, and stainless steel appliances.
+									Upstairs, the expansive master suite offers a luxurious en-suite bathroom and private balcony,
+									perfect for enjoying the stunning city views.
+								</p>
+								<p class="details-two">
+									Situated in a highly desirable neighborhood, this investment property presents a unique opportunity
+									for both the seasoned real estate investor and the first-time homebuyer. The property's flexible
+									zoning allows for a variety of potential uses, from a single-family residence to a multi-unit rental.
+								</p>
+							</div>
 
-					<div class="btn__wrapper">
-						<button class="btn__general">Additional resources</button>
-						<p>
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam dolor quaerat sint eligendi harum
-						</p>
-						<button class="btn__general">How does this work?</button>
-						<p>
-							Cumque, veniam qui unde officiis totam est, dicta, aliquam labore? Laborum vitae veritatis distinctio illum. Sequi?
-						</p>
-						<button class="btn__general">Why is Villa the best?</button>
-						<p>
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam dolor quaerat sint eligendi harum
-						</p>
-					</div>
-					<aside class="flex">
-						<div class="featured__detail flex">
-							<div class="feature flex">
+                    <aside class="flex">
+						<div class="highlight__detail flex">
+							<div class="highlight flex">
 								<img src="images/info-icon-01.png" />
 								<div>
-									<span class="flex">250 m2</span>
+									<span class="flex">450 m2</span>
 									<h8>Total Flat Space</h8>
 								</div>
 							</div>
-							<div class="feature flex">
+							<div class="highlight flex">
 								<img src="images/info-icon-02.png" />
 								<div>
 									<span class="flex">Contract</span>
 									<h8>Contract ready</h8>
 								</div>
 							</div>
-							<div class="feature flex">
+							<div class="highlight flex">
 								<img src="images/info-icon-03.png" />
 								<div>
 									<span class="flex">Payment</span>
 									<h8>Payment Process</h8>
 								</div>
 							</div>
-							<div class="feature flex">
+							<div class="highlight flex">
 								<img src="images/info-icon-04.png" />
 								<div>
 									<span class="flex">Safety</span>
 									<h8>24/7 Security</h8>
 								</div>
 							</div>
+						</div>
 					</aside>
-				</div>
-			</section>
-
-			<section class="video__section">
-				<div class="image-container flex">
-					<h6>| Video View</h6>
-					<h2>Get a Closer Look & Different Feeling</h2>
-					<div class="video-frame">
-						<img src="images/video-frame.jpg" />
-						<a href="https://www.youtube.com/watch?v=-lUv-Mt2QD4" target="_blank"><i class="fa fa-play"></i></a>
+							<button href="#" class="btn__schedule"><i class="fa fa-calendar"></i>Schedule a visit</button>
+                        </div>
 					</div>
-				</div>
-
-				<div class="container flex">
-					<div class="facts__container flex">
-						<div class="fact flex">
-							<span class="flex">34</span>
-							<h8>Completed Buildings</h8>
-						</div>
-						<div class="fact flex">
-							<span class="flex">12</span>
-							<h8>Years Experience</h8>
-						</div>
-						<div class="fact flex">
-							<span class="flex">24</span>
-							<h8>Industry Awards</h8>
-						</div>
-					</div>
-				</div>
-			</section>
-
-			<section class="best__deal">
-				<div class="best-deal container">
-					<h6>| Best Deal</h6>
-					<h2>Find Your Best Deal Right Now!</h2>
-					<div class="deal__btn-container flex">
-						<button class="btn__general">Apartment</button>
-						<button class="btn__general">Villa House</button>
-						<button class="btn__general">Penthouse</button>
-					</div>
-					<div class="deal__container flex">
-						<img class="deal__image" src="images/property-05.jpg" />
-						<aside class="info__table">
-							<ul>
-								<li>Total Flat Space <span>185 m2</span></li>
-								<li>Floor number <span>26th</span></li>
-								<li>Number of rooms <span>4</span></li>
-								<li>Parking Available <span>Yes</span></li>
-								<li>Payment Process <span>Bank</span></li>
-							</ul>
-						</aside>
-						<div class="details__container flex">
-							<h4>Additional details</h4>
-							<div class=" details__p flex">
-								<p class="details-one">
-									The prime location of this turnkey property boasts a prime corner lot with excellent curb appeal and ample parking. The spacious floorplan features an open-concept layout with high-end finishes throughout, including gleaming hardwood floors, custom cabinetry, and stainless steel appliances. Upstairs, the expansive master suite offers a luxurious en-suite bathroom and private balcony, perfect for enjoying the stunning city views.
-								</p>
-								<p class="details-two">
-									Situated in a highly desirable neighborhood, this investment property presents a unique opportunity for both the seasoned real estate investor and the first-time homebuyer. The property's flexible zoning allows for a variety of potential uses, from a single-family residence to a multi-unit rental. 
-								</p>
-							</div>
-							<button href="#" class="btn__schedule"><i class="fa fa-calendar"></i>Schedule a visit
-							</button>
-						</div>
-					</div>
-				</div>
-			</section>
-
-			<section class="property__section container">
-				<h6>| Properties</h6>
-				<h2>We Provide the most sought after Properties</h2>
-				<div class="property__cards flex">
-					<div class="card flex">
-						<img src="images/property-01.jpg" />
-						<div class="card__header flex">
-							<span class="card__flag">Luxury Villa</span>
-							<h6 class="card__price">$2.264.000</h6>
-						</div>
-
-						<h4 class="card__title">18 New Street Miami, FL 97219</h4>
-						<div class="card__description">
-							Bedrooms: <span>8</span> Bathrooms: <span>8</span> Area: <span>545m2</span> Floor:
-							<span>3</span> Parking: <span>6</span>
-						</div>
-						<button href="#" class="btn__schedule"><i class="fa fa-calendar"></i>Schedule a visit</button>
-					</div>
-
-					<div class="card flex">
-						<img src="images/property-02.jpg" />
-						<div class="card__header flex">
-							<span class="card__flag">Luxury Villa</span>
-							<h6 class="card__price">$1.180.000</h6>
-						</div>
-
-						<h4 class="card__title">54 Mid Street Miami, FL 97219</h4>
-						<div class="card__description">
-							Bedrooms: <span>6</span> Bathrooms: <span>5</span> Area: <span>450m2</span> Floor:
-							<span>3</span> Parking: <span>8</span>
-						</div>
-						<button href="#" class="btn__schedule"><i class="fa fa-calendar"></i>Schedule a visit</button>
-					</div>
-
-					<div class="card flex">
-						<img src="images/property-03.jpg" />
-						<div class="card__header flex">
-							<span class="card__flag">Luxury Villa</span>
-							<h6 class="card__price">$1.460.000</h6>
-						</div>
-
-						<h4 class="card__title">26 Old Street Miami, FL 97219</h4>
-						<div class="card__description">
-							Bedrooms: <span>5</span> Bathrooms: <span>4</span> Area: <span>225m2</span> Floor:
-							<span>3</span> Parking: <span>10</span>
-						</div>
-						<button href="#" class="btn__schedule"><i class="fa fa-calendar"></i>Schedule a visit</button>
-					</div>
-
-					<div class="card flex">
-						<img src="images/property-04.jpg" />
-						<div class="card__header flex">
-							<span class="card__flag">Apartment</span>
-							<h6 class="card__price">$584.500</h6>
-						</div>
-
-						<h4 class="card__title">12 New Street Miami, FL 97219</h4>
-						<div class="card__description">
-							Bedrooms: <span>4</span> Bathrooms: <span>3</span> Area: <span>125m2</span> Floor:
-							<span>25</span> Parking: <span>2</span>
-						</div>
-						<button href="#" class="btn__schedule"><i class="fa fa-calendar"></i>Schedule a visit</button>
-					</div>
-
-					<div class="card flex">
-						<img src="images/property-05.jpg" />
-						<div class="card__header flex">
-							<span class="card__flag">Penthouse</span>
-							<h6 class="card__price">$925.600</h6>
-						</div>
-
-						<h4 class="card__title">34 Beach Street Miami, FL 97219</h4>
-						<div class="card__description">
-							Bedrooms: <span>4</span> Bathrooms: <span>4</span> Area: <span>180m2</span> Floor:
-							<span>38</span> Parking: <span>2</span>
-						</div>
-						<button href="#" class="btn__schedule"><i class="fa fa-calendar"></i>Schedule a visit</button>
-					</div>
-
-					<div class="card flex">
-						<img src="images/property-06.jpg" />
-						<div class="card__header flex">
-							<span class="card__flag">Modern Condo</span>
-							<h6 class="card__price">$450.000</h6>
-						</div>
-
-						<h4 class="card__title">22 New Street Portland, OR 16540</h4>
-						<div class="card__description">
-							Bedrooms: <span>4</span> Bathrooms: <span>4</span> Area: <span>180m2</span> Floor:
-							<span>38</span> Parking: <span>2</span>
-						</div>
-						<button href="#" class="btn__schedule"><i class="fa fa-calendar"></i>Schedule a visit</button>
-					</div>
-				</div>
-			</section>
-
-			<section class="contact-section">
-				<div class="image-container flex">
-					<h6 class="section__subhead">| Contact us</h6>
-					<h2>Get In Touch With Our Agents</h2>
-				</div>
-
-				<div class="contact__content container flex">
-					<div class="google-map">
-						<iframe
-							src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14351.107544843828!2d-80.13252263928365!3d25.942549735816613!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88d9ace0f4fb6051%3A0x83ad83c3f213ec3a!2sSunny%20Isles%20Beach%20Government%20Center!5e0!3m2!1sen!2sus!4v1710168744928!5m2!1sen!2sus"
-							width="100%"
-							height="300"
-							style="border: 0"
-							allowfullscreen=""
-							loading="lazy"
-							referrerpolicy="no-referrer-when-downgrade"
-						></iframe>
-					</div>
-					<div class="icon-container flex">
-						<div class="item phone flex">
-							<img src="images/phone-icon.png" />
-							<h4>000-000-0000<br><span>Call 24/7</span></h4>
-						</div>
-
-						<div class="item email flex">
-							<img src="images/email-icon.png" />
-							<h4>info@villa.com<br><span>Email</span></h4>
-						</div>
-					</div>
-
-					<form class="flex" id="contact-form" action="" method="post">
-						<fieldset>
-							<label for="name">Full Name</label>
-							<input type="name" name="name" id="name" placeholder="Your Name..." autocomplete="on" required />
-						</fieldset>
-
-						<fieldset>
-							<label for="email">Email Address</label>
-							<input
-								type="text"
-								name="email"
-								id="email"
-								pattern="[^ @]*@[^ @]*"
-								placeholder="Your E-mail..."
-								required=""
-							/>
-						</fieldset>
-
-						<fieldset>
-							<label for="subject">Subject</label>
-							<input type="subject" name="subject" id="subject" placeholder="Subject..." autocomplete="on" />
-						</fieldset>
-
-						<fieldset>
-							<label for="message">Message</label>
-							<textarea name="message" id="message" placeholder="Your Message"></textarea>
-						</fieldset>
-						<button class="btn__general">Send Message</button>
-					</form>
-				</div>
-			</section>
+			</section> 
 		</main>
 
 		<footer class="footer__section flex">
 			<div>
 				<div class="comp-logo-white">Villa</div>
-					<div>
-						<ul class="social__container-ftr flex">
-							<li>
-								<button href="#" class="social-footer">
-									<span class="fa-brands fa-facebook social-icon"></span>
-								</button>
-							</li>
-							<li>
-								<button href="#" class="social-footer">
-									<span class="fa-brands fa-twitter social-icon"></span>
-								</button>
-							</li>
-							<li>
-								<button href="#" class="social-footer">
-									<span class="fa-brands fa-linkedin social-icon"></span>
-								</button>
-							</li>
-							<li>
-								<button href="#" class="social-footer">
-									<span class="fa-brands fa-square-instagram social-icon"></span>
-								</button>
-							</li>
-						</ul>
+				<div>
+					<ul class="social__container-ftr flex">
+						<li>
+							<button href="#" class="social-footer">
+								<span class="fa-brands fa-facebook social-icon"></span>
+							</button>
+						</li>
+						<li>
+							<button href="#" class="social-footer">
+								<span class="fa-brands fa-twitter social-icon"></span>
+							</button>
+						</li>
+						<li>
+							<button href="#" class="social-footer">
+								<span class="fa-brands fa-linkedin social-icon"></span>
+							</button>
+						</li>
+						<li>
+							<button href="#" class="social-footer">
+								<span class="fa-brands fa-square-instagram social-icon"></span>
+							</button>
+						</li>
+					</ul>
 				</div>
 			</div>
 			<div class="footer__nav flex">
