--- a/property-details.html
+++ b/property-details.html
@@ -72,25 +72,22 @@
 
 		<main>
 			<section class="property__section">
-                <div class="image-container flex">
+				<div class="image-container flex">
 					<h6>Home/Property</h6>
 					<h2>Property Details</h2>
 				</div>
-
-				<div class="property__cards flex">
-					<div class="card flex">
-						<img src="images/property-01.jpg" />
-						<div class="property-description flex">
-							<span class="property__flag">Luxury Villa</span>
-                            <h8 class="card__title">18 New Street Miami, FL 97219</h8>
-							<h6 class="card__price">$2.264.000</h6>
-                        </div>
-                        <div class="card__description">
+				<div class="property__wrapper container flex">
+					<div><img src="images/property-01.jpg" /></div>
+					<div class="property-description flex">
+						<span class="property__flag">Luxury Villa</span>
+						<h8 class="card__title">18 New Street Miami, FL 97219</h8>
+						<h6 class="card__price">$2.264.000</h6>
+						<div class="card__description">
 							Bedrooms: <span>8</span> Bathrooms: <span>8</span> Area: <span>545m2</span> Floor:
 							<span>3</span> Parking: <span>6</span>
 						</div>
-                        <div class="details__container flex">
-							 <h4>Additional details</h4>
+						<div class="details__container flex">
+							<h4>Additional details</h4>
 							<div class="details__p flex">
 								<p class="details-one">
 									The prime location of this turnkey property boasts a prime corner lot with excellent curb appeal and
@@ -105,8 +102,9 @@
 									zoning allows for a variety of potential uses, from a single-family residence to a multi-unit rental.
 								</p>
 							</div>
-
-                    <aside class="flex">
+						</div>
+					</div>
+					<aside class="flex">
 						<div class="highlight__detail flex">
 							<div class="highlight flex">
 								<img src="images/info-icon-01.png" />
@@ -138,10 +136,9 @@
 							</div>
 						</div>
 					</aside>
-							<button href="#" class="btn__schedule"><i class="fa fa-calendar"></i>Schedule a visit</button>
-                        </div>
-					</div>
-			</section> 
+					<button href="#" class="btn__schedule"><i class="fa fa-calendar"></i>Schedule a visit</button>
+				</div>
+			</section>
 		</main>
 
 		<footer class="footer__section flex">
