Commit current state

--- a/property-details.html
+++ b/property-details.html
@@ -77,7 +77,7 @@
 					<h2>Property Details</h2>
 				</div>
 				<div class="property__wrapper container flex">
-					<div><img src="images/property-01.jpg" /></div>
+					<img src="images/property-01.jpg" />
 					<div class="property-description flex">
 						<span class="property__flag">Luxury Villa</span>
 						<h8 class="card__title">18 New Street Miami, FL 97219</h8>
