Adjusted property detail layout

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 	<body>
 		<header class="header">
-			<div class="subheader__container flex">
+			<div class="subheader__container container flex">
 				<div>
 					<ul class="flex">
 						<li class="li__email"><i class="fa fa-envelope"></i>info@company.com</li>
@@ -50,7 +50,7 @@
 			</div>
 
 			<nav>
-				<div class="main__nav-container flex">
+				<div class="main__nav-container container flex">
 					<a class="comp-logo" href="index.html">Villa</a>
 					<button class="nav-toggle" aria-label="open navigation">
 						<span class="hamburger"></span>
