--- a/property-details.html
+++ b/property-details.html
@@ -16,7 +16,7 @@
 
 	<body>
 		<header class="header">
-			<div class="subheader__container flex">
+			<div class="subheader__container container flex">
 				<div>
 					<ul class="flex">
 						<li class="li__email"><i class="fa fa-envelope"></i>info@company.com</li>
@@ -50,7 +50,7 @@
 			</div>
 
 			<nav>
-				<div class="main__nav-container flex">
+				<div class="main__nav-container container flex">
 					<a class="comp-logo" href="index.html">Villa</a>
 					<button class="nav-toggle" aria-label="open navigation">
 						<span class="hamburger"></span>
@@ -80,7 +80,7 @@
 					<img src="images/property-01.jpg" />
 					<div class="property-description flex">
 						<span class="property__flag">Luxury Villa</span>
-						<h8 class="card__title">18 New Street Miami, FL 97219</h8>
+						<h8 class="card__title">18 New Street, Miami, FL 97219</h8>
 						<h6 class="card__price">$2.264.000</h6>
 						<div class="card__description">
 							Bedrooms: <span>8</span> Bathrooms: <span>8</span> Area: <span>545m2</span> Floor:
