Changed the feature button section to FAQ

--- a/index.html
+++ b/index.html
@@ -85,9 +85,44 @@
 
 						<div class="feature__icon flex"><img src="images/featured-icon.png" /></div>
 					</div>
+					<div class="faq-container">
+						<div class="faq active">
+							<h4 class="faq-title">I'd like more info</h4>
 
-					<div class="btn__wrapper">
-						<button class="btn__general">Additional resources</button>
+							<p class="faq-text">
+								Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam dolor quaerat sint eligendi harum
+							</p>
+
+							<button class="faq-toggle">
+								<i class="fas fa-chevron-down"></i>
+								<i class="fas fa-times"></i>
+							</button>
+						</div>
+
+						<div class="faq">
+							<h4 class="faq-title">How does this work?</h4>
+							<p class="faq-text">
+								Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam dolor quaerat sint eligendi harum
+							</p>
+							<button class="faq-toggle">
+								<i class="fas fa-chevron-down"></i>
+								<i class="fas fa-times"></i>
+							</button>
+						</div>
+
+						<div class="faq">
+							<h4 class="faq-title">Why is Villa the best?</h4>
+							<p class="faq-text">
+								Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam dolor quaerat sint eligendi harum
+							</p>
+							<button class="faq-toggle">
+								<i class="fas fa-chevron-down"></i>
+								<i class="fas fa-times"></i>
+							</button>
+						</div>
+					</div>
+					<!-- <div class="btn__wrapper">
+						<button class="btn__general">I'd like more info</button>
 						<p>
 							Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam dolor quaerat sint eligendi harum
 						</p>
@@ -100,7 +135,7 @@
 						<p>
 							Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam dolor quaerat sint eligendi harum
 						</p>
-					</div>
+					</div> -->
 					<aside class="flex">
 						<div class="featured__detail flex">
 							<div class="feature flex">
