--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
 							<li class="nav__item"><a href="index.html" class="nav__link">Home</a></li>
 							<li class="nav__item"><a href="#" class="nav__link">Properties</a></li>
 							<li class="nav__item"><a href="property-details.html" class="nav__link">Property Details</a></li>
-							<li class="nav__item"><a href="#" class="nav__link">Contact us</a></li>
+							<li class="nav__item"><a href="contact.html" class="nav__link">Contact us</a></li>
 							<li>
 								<button href="#" class="btn__schedule"><i class="fa fa-calendar"></i>Schedule a visit</button>
 							</li>
@@ -73,21 +73,18 @@
 		<main>
 			<section class="contact-section">
 				<div class="image-container flex">
-					<h6 class="section__subhead">| Contact us</h6>
-					<h2>Get In Touch With Our Agents</h2>
+					<h6 class="section__subhead">Home/Contact us</h6>
+					<h2>Contact Us</h2>
 				</div>
 
 				<div class="contact__content container flex">
-					<div class="google-map">
-						<iframe
-							src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14351.107544843828!2d-80.13252263928365!3d25.942549735816613!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88d9ace0f4fb6051%3A0x83ad83c3f213ec3a!2sSunny%20Isles%20Beach%20Government%20Center!5e0!3m2!1sen!2sus!4v1710168744928!5m2!1sen!2sus"
-							width="100%"
-							height="300"
-							style="border: 0"
-							allowfullscreen=""
-							loading="lazy"
-							referrerpolicy="no-referrer-when-downgrade"
-						></iframe>
+					<div class="contact__intro">
+						<h3>Get in Touch with Our Agents</h3>
+						<p class="intro-text">
+							At Villa, we're here to help you with all your real estate needs. Whether you're buying, selling, or
+							just have a question, our team of experienced agents is ready to assist you. Contact us today to get
+							started!
+						</p>
 					</div>
 					<div class="icon-container flex">
 						<div class="item phone flex">
@@ -99,6 +96,18 @@
 							<img src="images/email-icon.png" />
 							<h4>info@villa.com<br /><span>Email</span></h4>
 						</div>
+					</div>
+
+					<div class="google-map">
+						<iframe
+							src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14351.107544843828!2d-80.13252263928365!3d25.942549735816613!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88d9ace0f4fb6051%3A0x83ad83c3f213ec3a!2sSunny%20Isles%20Beach%20Government%20Center!5e0!3m2!1sen!2sus!4v1710168744928!5m2!1sen!2sus"
+							width="100%"
+							height="300"
+							style="border: 0"
+							allowfullscreen=""
+							loading="lazy"
+							referrerpolicy="no-referrer-when-downgrade"
+						></iframe>
 					</div>
 
 					<form class="flex" id="contact-form" action="" method="post">
