--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 							<li class="nav__item"><a href="index.html" class="nav__link">Home</a></li>
 							<li class="nav__item"><a href="#" class="nav__link">Properties</a></li>
 							<li class="nav__item"><a href="property-details.html" class="nav__link">Property Details</a></li>
-							<li class="nav__item"><a href="#" class="nav__link">Contact us</a></li>
+							<li class="nav__item"><a href="contact.html" class="nav__link">Contact us</a></li>
 							<li>
 								<button href="#" class="btn__schedule"><i class="fa fa-calendar"></i>Schedule a visit</button>
 							</li>
