Starting property page

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 					<div class="card flex">
 						<img src="images/property-01.jpg" />
 						<div class="card__header flex">
-							<span class="card__flag">Luxury Villa</span>
+							<span class="card__flag" id="luxury">Luxury Villa</span>
 							<h6 class="card__price">$2.264.000</h6>
 						</div>
 
@@ -263,7 +263,7 @@
 					<div class="card flex">
 						<img src="images/property-02.jpg" />
 						<div class="card__header flex">
-							<span class="card__flag">Luxury Villa</span>
+							<span class="card__flag" id="luxury">Luxury Villa</span>
 							<h6 class="card__price">$1.180.000</h6>
 						</div>
 
@@ -278,7 +278,7 @@
 					<div class="card flex">
 						<img src="images/property-03.jpg" />
 						<div class="card__header flex">
-							<span class="card__flag">Luxury Villa</span>
+							<span class="card__flag" id="luxury">Luxury Villa</span>
 							<h6 class="card__price">$1.460.000</h6>
 						</div>
 
@@ -293,7 +293,7 @@
 					<div class="card flex">
 						<img src="images/property-04.jpg" />
 						<div class="card__header flex">
-							<span class="card__flag">Apartment</span>
+							<span class="card__flag" id="apartment">Apartment</span>
 							<h6 class="card__price">$584.500</h6>
 						</div>
 
@@ -308,7 +308,7 @@
 					<div class="card flex">
 						<img src="images/property-05.jpg" />
 						<div class="card__header flex">
-							<span class="card__flag">Penthouse</span>
+							<span class="card__flag" id="penthouse">Penthouse</span>
 							<h6 class="card__price">$925.600</h6>
 						</div>
 
@@ -323,7 +323,7 @@
 					<div class="card flex">
 						<img src="images/property-06.jpg" />
 						<div class="card__header flex">
-							<span class="card__flag">Modern Condo</span>
+							<span class="card__flag" id="modern">Modern Condo</span>
 							<h6 class="card__price">$450.000</h6>
 						</div>
 
