--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 					<nav class="nav">
 						<ul class="nav__list flex">
 							<li class="nav__item"><a href="index.html" class="nav__link">Home</a></li>
-							<li class="nav__item"><a href="#" class="nav__link">Properties</a></li>
+							<li class="nav__item"><a href="properties.html" class="nav__link">Properties</a></li>
 							<li class="nav__item"><a href="property-details.html" class="nav__link">Property Details</a></li>
 							<li class="nav__item"><a href="contact.html" class="nav__link">Contact us</a></li>
 							<li>
