--- a/properties.html
+++ b/properties.html
@@ -10,9 +10,8 @@
 			rel="stylesheet"
 		/>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
-		<link rel="stylesheet" href="style.css" />
+		<link rel="stylesheet" href="style-property.css" />
 		<title>Villa Agency - Real Estate</title>
-	</head>
 
 	<body>
 		<header class="header">
@@ -58,7 +57,7 @@
 					<nav class="nav">
 						<ul class="nav__list flex">
 							<li class="nav__item"><a href="index.html" class="nav__link">Home</a></li>
-							<li class="nav__item"><a href="#" class="nav__link">Properties</a></li>
+							<li class="nav__item"><a href="properties.html" class="nav__link">Properties</a></li>
 							<li class="nav__item"><a href="property-details.html" class="nav__link">Property Details</a></li>
 							<li class="nav__item"><a href="contact.html" class="nav__link">Contact us</a></li>
 							<li>
@@ -71,10 +70,19 @@
 		</header>
 
 		<main>
-			<section class="property__section container">
-				<h6>| Properties</h6>
-				<h2>We Provide the most sought after Properties</h2>
-				<div class="property__cards flex">
+			<section class="property__section">
+                <div class="image-container flex">
+					<h6 class="section__subhead">Home/Properties</h6>
+					<h2>Properties</h2>
+				</div>
+
+				<div class="property__cards container flex">
+                    <div class="property__btn-container flex">
+						<button class="btn__general active toggle">Select All</button>
+						<button class="btn__general toggle">Apartment</button>
+						<button class="btn__general toggle">Villa House</button>
+						<button class="btn__general toggle">Penthouse</button>
+					</div>
 					<div class="card flex">
 						<img src="images/property-01.jpg" />
 						<div class="card__header flex">
@@ -218,6 +226,6 @@
 				<p>Copyright 2024 Villa Inc. <br />All rights reserved.</p>
 			</div>
 		</footer>
-		<script src="main.js"></script>
+		<script src="properties.js"></script>
 	</body>
 </html>
