Button script set

--- a/properties.html
+++ b/properties.html
@@ -78,10 +78,10 @@
 
 				<div class="property__cards container flex">
                     <div class="property__btn-container flex">
-						<button class="btn__general active toggle">Select All</button>
-						<button class="btn__general toggle">Apartment</button>
-						<button class="btn__general toggle">Villa House</button>
-						<button class="btn__general toggle">Penthouse</button>
+						<button class="btn__general active">Select All</button>
+						<button class="btn__general">Apartment</button>
+						<button class="btn__general">Villa House</button>
+						<button class="btn__general">Penthouse</button>
 					</div>
 					<div class="card flex">
 						<img src="images/property-01.jpg" />
